# rust-basic-crud

./: .env_example  Cargo.toml  README.md
src/: main.rs
src/config/: database.rs
src/handlers/: product_handler.rs
src/models/: product.rs
src/repositories/: product_repository.rs
src/routes/: mod.rs  product_routes.rs
src/services/: product_service.rs
