[package]
name = "rust-basic-crud"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-http = "3"
actix-service = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
dotenv = "0.15"